<resources>

    <!--Generals-->
    <string name="app_name" translatable="false">Legstep</string>
    <string name="activity_title_settings">Settings</string>

    <!--Main Activity-->
    <string name="legstep_hi" formatted="false">Hi my name is %s.\nLets Play!</string>
    <string name="legstep_i_am" formatted="false">I am a %s</string>
    <string name="legstep_legs" formatted="false">With %d legs</string>
    <string name="podium_length" formatted="false">The length of podium %d meters.</string>
    <string name="position_initial" formatted="false">%s in initial position</string>
    <string name="position_return_to_initial" formatted="false">%s is returning to initial position</string>
    <string name="position_move_forward" formatted="false">%s move forward from %d position</string>
    <string name="position_move_backward" formatted="false">%s move backward from %d position</string>
    <string name="position_at_position" formatted="false">%s at %d m position</string>
    <string name="position_complete">Walk completed! Return to initial position.</string>
    <string name="position_snackbar_error" formatted="false" translatable="false">Error rised (%s).</string>

    <!--Settings-->
    <string name="restore_defaults" translatable="false">Restore defaults</string>
    <string name="restore_snackbar_defaults_confirm">Restore default will override all data to default. Perform?</string>
    <string name="creature_config">Creature</string>
    <string name="creature">Your creature</string>
    <string name="creature_title">Title</string>
    <string name="creature_title_hint">Enter title here</string>
    <string name="creature_type">Type</string>
    <string name="creature_type_hint">Enter type here</string>
    <string name="creature_step_size">Step size</string>
    <string name="creature_legs_number">Legs number</string>
    <string name="creature_id" translatable="false">Id</string>
    <string name="creature_paws">Paws order</string>
    <string name="podium_config">Podium</string>
    <string name="podium">Your podium</string>
    <string name="podium_size">Podium size</string>
    <string name="podium_validate">Validation</string>
    <string name="podium_routes">Podium routes</string>
    <string name="podium_add_route">Add route</string>
    <string name="podium_new_route_length">Length</string>
    <string name="podium_new_route_direction">Direction</string>
    <string name="podium_snackbar_podium_valid">Podium is valid!</string>
    <string name="podium_snackbar_podium_invalid">Podium is invalid! Check length and routes!</string>
    <string name="podium_toast_routes_invalid">Routes were invalid. Podium forced to default.</string>

    <!--Date-->
    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>

    <!--Creature defaults-->
    <string name="creature_default_title">Legstep</string>
    <string name="creature_default_type">Dog</string>

    <!--Actions-->
    <string name="action_add_route">Add Route</string>
    <string name="action_check_podium">Check</string>
    <string name="action_restore">RESTORE</string>
    <string name="action_ok" translatable="false">OK</string>
    <string name="action_we_all_die" translatable="false">WE ALL DIE</string>
    <string name="action_initial">Initial</string>

    <!--Technical strings-->
    <string name="server_error_with_code" translatable="false">Server error %d, please try again later.</string>
    <string name="common_integer_picker" translatable="false" formatted="false">%d</string>

    <!--Option menu-->
    <string name="option_menu_lang_en" translatable="false">English</string>
    <string name="option_menu_lang_ru" translatable="false">Русский</string>
    <string name="option_menu_lang_uk" translatable="false">Українська</string>
</resources>
